# pytorch-basic

./: .gitignore  pyproject.toml  w1_basic.ipynb  w2_basic_nn.ipynb
