[tool.poetry]
name = "install-pytorch"
version = "0.1.0"
description = ""
authors = ["Kang Seonghyeon <shyeon.kang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
